--- a/linha.html
+++ b/linha.html
@@ -10,8 +10,7 @@
     body {
       font-family: Arial, sans-serif;
       background: url('IMG_0531.jpeg') no-repeat center center fixed;
-      background-size: contain; /* Mostra a imagem inteira sem cortar */
-      background-color: #000; /* Fundo caso a imagem não preencha */
+      background-size: cover; /* Preenche toda a tela */
       min-height: 100vh;
       color: #fff;
       display: flex;
