--- a/linha.html
+++ b/linha.html
@@ -9,23 +9,24 @@
 
     body {
       font-family: Arial, sans-serif;
-      background: url('IMG_0531.jpeg') no-repeat center center fixed;
-      background-size: cover; /* Preenche toda a tela */
       min-height: 100vh;
-      color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 20px;
       position: relative;
+      background-color: #222; /* cor de fundo complementar */
     }
 
-    /* Camada escura sobre a imagem para contraste */
-    body::before {
-      content: "";
+    /* Imagem de fundo como elemento, proporcional e semi-transparente */
+    body img.bg {
       position: absolute;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background-color: rgba(0,0,0,0.4); /* semi-transparente */
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* mantém proporção sem cortar */
+      opacity: 0.6; /* semi-transparente */
       z-index: 0;
     }
 
@@ -45,6 +46,7 @@
     h1 {
       font-size: 28px;
       margin-bottom: 25px;
+      color: #fff;
       text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
     }
 
@@ -57,6 +59,7 @@
       display: block;
       margin-bottom: 6px;
       font-weight: bold;
+      color: #fff;
     }
 
     input, select {
@@ -104,6 +107,10 @@
 </head>
 <body>
 
+  <!-- Imagem de fundo -->
+  <img src="IMG_0531.jpeg" alt="Linha de Ônibus" class="bg">
+
+  <!-- Container central -->
   <div class="container">
     <h1>Cadastro de Linha de Ônibus</h1>
     <form>
