--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <title>Sistema de Rastreabilidade de Frota</title>
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
+    html { scroll-behavior: smooth; }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -16,7 +13,6 @@
       position: relative;
       color: #fff;
     }
-
     body::before {
       content: "";
       position: fixed;
@@ -24,75 +20,83 @@
       background: rgba(0,0,0,0.4);
       z-index: -1;
     }
-
     header {
-      background: rgba(0, 0, 0, 0.5); /* leve transparência */
+      background: rgba(0,0,0,0.5);
       text-align: center;
       padding: 20px;
       position: relative;
       z-index: 5;
     }
+    header h1 { margin: 0; font-size: 28px; }
 
-    header h1 {
-      margin: 0;
-      font-size: 28px;
+    /* Menu inicial */
+    .menu-inicial {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 50px;
+      flex-wrap: wrap;
     }
+    .menu-inicial button {
+      padding: 15px 25px;
+      font-size: 18px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      background: #2e86c1;
+      color: white;
+      transition: background 0.3s;
+    }
+    .menu-inicial button:hover { background: #1a5276; }
 
-    nav {
-      background: rgba(0, 0, 0, 0.35); /* transparente sobre a imagem */
-      text-align: center;
-      padding: 10px;
+    .menu-lateral {
       position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 10;
-      backdrop-filter: blur(5px); /* deixa o fundo mais legível */
+      bottom: 30px;
+      left: 30px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
+    .menu-lateral button {
+      padding: 10px 15px;
+      border-radius: 6px;
+      border: none;
+      background: #28b463;
+      color: white;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .menu-lateral button:hover { background: #1e8449; }
 
-    nav a {
-      color: #fff;
-      margin: 0 15px;
-      text-decoration: none;
+    /* Submenu por perfil */
+    .submenu {
+      display: none;
+      text-align: center;
+      margin-top: 30px;
+      gap: 15px;
+      flex-wrap: wrap;
+    }
+    .submenu button {
+      padding: 12px 20px;
+      border: none;
+      border-radius: 6px;
+      background: #2e86c1;
+      color: white;
       font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
     }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
+    .submenu button:hover { background: #1b4f72; }
 
     .container {
       max-width: 800px;
-      margin: 120px auto 40px; /* espaço superior para o menu fixo */
-      background: rgba(255, 255, 255, 0.9);
+      margin: 40px auto;
+      background: rgba(255,255,255,0.9);
       padding: 20px;
       border-radius: 8px;
       color: #333;
       position: relative;
       z-index: 1;
-    }
-
-    h2 {
-      margin-top: 0;
-    }
-
-    form input, form select, form button {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 8px;
-    }
-
-    form button {
-      background: #2e86c1;
-      border: none;
-      color: #fff;
-      cursor: pointer;
-      font-size: 16px;
-      border-radius: 4px;
-    }
-
-    form button:hover {
-      background: #1a5276;
     }
 
     #topBtn {
@@ -112,42 +116,65 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
       transition: background 0.3s;
     }
-
-    #topBtn:hover {
-      background-color: #1a5276;
-    }
+    #topBtn:hover { background-color: #1a5276; }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Sistema de Rastreabilidade de Frota</h1>
-    <p>Bem-vindo ao sistema integrado de ônibus</p>
+    <p>Escolha seu perfil abaixo</p>
   </header>
 
-  <nav>
-    <a href="#rotas">Rotas</a>
-    <a href="#linhas">Linhas</a>
-    <a href="#motoristas">Motoristas</a>
-    <a href="#funcionarios">Funcionários</a>
-    <a href="#usuarios">Usuários</a>
-    <a href="#onibus">Ônibus</a>
-    <a href="#ajuda">Ajuda</a>
-    <a href="#duvidas">Dúvidas Frequentes</a>
-  </nav>
+  <!-- Menu Inicial -->
+  <div class="menu-inicial">
+    <button onclick="selecionarPerfil('funcionario')">Funcionário</button>
+    <button onclick="selecionarPerfil('usuario')">Usuário</button>
+    <button onclick="selecionarPerfil('motorista')">Motorista</button>
+  </div>
+
+  <!-- Menu lateral -->
+  <div class="menu-lateral">
+    <button onclick="document.getElementById('duvidas').scrollIntoView({behavior:'smooth'})">Dúvidas</button>
+    <button onclick="document.getElementById('ajuda').scrollIntoView({behavior:'smooth'})">Ajuda</button>
+  </div>
+
+  <!-- Submenus por perfil -->
+  <div id="submenu-usuario" class="submenu">
+    <button onclick="scrollPara('linhas')">Linhas</button>
+    <button onclick="scrollPara('rotas')">Rotas</button>
+    <button onclick="scrollPara('onibus')">Ônibus</button>
+    <button onclick="scrollPara('rastreabilidade')">Rastreabilidade</button>
+  </div>
+
+  <div id="submenu-motorista" class="submenu">
+    <button onclick="scrollPara('linhas')">Linhas</button>
+    <button onclick="scrollPara('rotas')">Rotas</button>
+    <button onclick="scrollPara('onibus')">Ônibus</button>
+  </div>
+
+  <!-- Seções -->
+  <section id="linhas" class="container">
+    <h2>Linhas</h2>
+    <p>Informações das linhas.</p>
+  </section>
 
   <section id="rotas" class="container">
     <h2>Rotas</h2>
-    <p>Aqui estarão listadas as rotas disponíveis.</p>
+    <p>Informações das rotas.</p>
   </section>
 
-  <section id="linhas" class="container">
-    <h2>Linhas</h2>
-    <p>Aqui estarão listadas as linhas de ônibus.</p>
+  <section id="onibus" class="container">
+    <h2>Ônibus</h2>
+    <p>Cadastro e informações dos ônibus.</p>
+  </section>
+
+  <section id="rastreabilidade" class="container">
+    <h2>Rastreabilidade</h2>
+    <p>Controle e rastreabilidade de frotas para usuários.</p>
   </section>
 
   <section id="motoristas" class="container">
-    <h2>Formulário - Motorista</h2>
+    <h2>Motoristas</h2>
     <form>
       <input type="text" placeholder="Nome do Motorista" required>
       <input type="text" placeholder="Número da CNH" required>
@@ -157,7 +184,7 @@
   </section>
 
   <section id="funcionarios" class="container">
-    <h2>Formulário - Funcionário</h2>
+    <h2>Funcionários</h2>
     <form>
       <input type="text" placeholder="Nome do Funcionário" required>
       <input type="text" placeholder="Matrícula" required>
@@ -167,7 +194,7 @@
   </section>
 
   <section id="usuarios" class="container">
-    <h2>Formulário - Usuário</h2>
+    <h2>Usuários</h2>
     <form>
       <input type="text" placeholder="Nome do Usuário" required>
       <input type="email" placeholder="E-mail" required>
@@ -176,44 +203,40 @@
     </form>
   </section>
 
-  <section id="onibus" class="container">
-    <h2>Ônibus</h2>
-    <p>Cadastro e informações dos ônibus da frota.</p>
-    <form>
-      <input type="text" placeholder="Número do Ônibus" required>
-      <input type="text" placeholder="Placa" required>
-      <input type="text" placeholder="Linha Associada">
-      <button type="submit">Cadastrar</button>
-    </form>
-  </section>
-
   <section id="ajuda" class="container">
     <h2>Ajuda</h2>
-    <p>Se precisar de suporte, entre em contato com a central de atendimento.</p>
+    <p>Suporte e instruções.</p>
   </section>
 
   <section id="duvidas" class="container">
     <h2>Dúvidas Frequentes</h2>
-    <p>Aqui você encontra respostas para as perguntas mais comuns sobre o sistema.</p>
+    <p>Perguntas comuns e respostas.</p>
   </section>
 
-  <!-- Botão Voltar ao Topo -->
   <button onclick="topFunction()" id="topBtn" title="Voltar ao topo">↑</button>
 
   <script>
+    // Botão Voltar ao Topo
     const topBtn = document.getElementById("topBtn");
     window.onscroll = function() {
-      if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+      if(document.body.scrollTop > 200 || document.documentElement.scrollTop > 200){
         topBtn.style.display = "block";
-      } else {
-        topBtn.style.display = "none";
-      }
-    };
+      } else { topBtn.style.display = "none"; }
+    }
+    function topFunction(){ window.scrollTo({top:0, behavior:'smooth'}); }
 
-    function topFunction() {
-      window.scrollTo({top: 0, behavior: 'smooth'});
+    // Mostrar submenu dependendo do perfil escolhido
+    function selecionarPerfil(perfil){
+      document.getElementById('submenu-usuario').style.display = 'none';
+      document.getElementById('submenu-motorista').style.display = 'none';
+      if(perfil === 'usuario') document.getElementById('submenu-usuario').style.display = 'flex';
+      if(perfil === 'motorista') document.getElementById('submenu-motorista').style.display = 'flex';
+      // para funcionário, não há submenu específico
+    }
+
+    function scrollPara(id){
+      document.getElementById(id).scrollIntoView({behavior:'smooth'});
     }
   </script>
-
 </body>
 </html>
